# cmake_github_action_test

./: CMakeLists.txt  mytest.cpp
.github/workflows/: test.yml
cmake/: test_global_bar.cmake
